# S7_project

./: .gitattributes  .local_planner.cpp.swp  copy.sh  local_planner.cpp  local_planner.py  local_planner2.py  send.sh
boundary/: CMakeLists.txt  package.xml  setup.py
boundary/launch/: boundary.launch  boundary_controller.launch
boundary/src/: boundary.py
boundary/tests/: roslaunch_test.xml
boundary/w/: worldhull1_1propeller_boundary_onside.wbt  worldhull2_1propeller_boundary_onside.wbt
boundary/worlds/: .bothhulls.wbproj  .empty.wbproj  .undersim.wbproj  .undersim_1.wbproj  .undersim_1sad.wbproj  .undersim_car-bottum.wbproj  .undersim_car-turned-sideways.wbproj  .undersim_car.wbproj  .undersim_car_with_boat.wbproj  .undersim_empty_start.wbproj  .worldhull1.wbproj  .worldhull1_1propeller.wbproj  .worldhull1_1propeller_NOT_on_boat.wbproj  .worldhull1_1propeller_boundary.wbproj  .worldhull1_1propeller_boundary_test.wbproj  .worldhull1_1propeller_boundary_test1.wbproj  .worldhull1_1propeller_boundary_tester.wbproj  .worldhull1_1propeller_on_boat.wbproj  .worldhull1_2propeller.wbproj  .worldhull1_2propeller_Not_pn_boat.wbproj  .worldhull1_2propeller_boundary.wbproj  .worldhull1_2propeller_on_boat.wbproj  .worldhull1_propeller.wbproj  .worldhull1_propeller_test.wbproj  .worldhull2_1propeller.wbproj  .worldhull2_1propeller_boundary.wbproj  .worldhull2_1propeller_on_boat.wbproj  .worldhull2_2propeller.wbproj  .worldhull2_2propeller_boat.wbproj  .worldhull2_2propeller_tester.wbproj  .worldhull3_1propeller.wbproj  .worldhull3_1propeller_boundary.wbproj  .worldhull3_1propeller_on_boat.wbproj  .worldhull3_2propeller_boundary.wbproj  .worldhull3_2propeller_onside.wbproj  worldhull1_1propeller_onside.wbt  worldhull1_2propeller_boundary_onside.wbt  worldhull1_2propeller_onside.wbt  worldhull2_1propeller_onside.wbt  worldhull2_2propeller_boundary_onside.wbt  (+1 more)
controller/: controller.py  controller_1.py
globlaplannerv2/: CMakeLists.txt  package.xml
grid/: griding.py
local_planner/: copy.sh  local_planner.cpp  send.sh
matlab/: Navigation_Visualisation_1.fig  averageZ.m  belongsTo.m  bool.txt  coveredArea.m  crossLines.asv  crossLines.m  data_DEFAULT_mal.mat  dedBasil1.fig  eval_script.m  evaluationFunction.m  getLine.m  getRect.m  getTriangulation.m  pathArea.m  plotElements.m  prova.m  prova.txt  prova_nums.asv  prova_nums.m  quadIntersect.m  rotateE.m  (+6 more)
test_pkg/: CMakeLists.txt  package.xml
test_pkg/launch/: boat.launch
test_pkg/src/: autoworld.sh  local_planner (copy).cpp  local_planner.cpp
(+39 files in other folders)
