<?xml version="1.0"?>
<package format="2">
  <name>boundary</name>
  <version>1.2.1</version>
<description>
    Webots wrapper for the boundarys.
</description>


<author>Mark</author>
<maintainer email="mblank16@student.aau.dk">Mark</maintainer>

<license>Apache 2.0</license>



<buildtool_depend>catkin</buildtool_depend>

<build_depend>roslaunch</build_depend>
<build_depend>rostopic</build_depend>
<build_depend>controller_manager</build_depend>
<build_export_depend>roslaunch</build_export_depend>
<build_export_depend>rostopic</build_export_depend>
<build_export_depend>controller_manager</build_export_depend>
<exec_depend>roslaunch</exec_depend>
<exec_depend>rostopic</exec_depend>
<exec_depend>controller_manager</exec_depend>


<build_depend>geometry_msgs</build_depend>
<build_depend>rospy</build_depend>
<build_depend>rosgraph_msgs</build_depend>
<build_export_depend>geometry_msgs</build_export_depend>
<build_export_depend>rospy</build_export_depend>
<build_export_depend>rosgraph_msgs</build_export_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>rosgraph_msgs</exec_depend>

<export>
</export>
</package>
